# neuralringer

./: .gitignore  Doxyfile  Makefile  build.mk  config.mk  idiap.sh  makefile.config  makefile.data  makefile.lvl1  makefile.network  makefile.rbuild  makefile.roiformat  makefile.sys  setup.sh
config/: Makefile  gdbrc
config/config/: Header.h  Network.h  Neuron.h  NeuronBackProp.h  Parameter.h  Synapse.h  SynapseBackProp.h
config/example/: caloba.xml  matlab.xml  wrong.xml  xor.xml
config/schema/: network.xsd
config/src/: Header.cxx  Network.cxx  Neuron.cxx  NeuronBackProp.cxx  Synapse.cxx  SynapseBackProp.cxx  test_config.cxx
data/: Makefile
data/data/: Database.h  EnergyNormaliseOperator.h  Ensemble.h  FeatureExtractor.h  Header.h  MaxExtractor.h  MeanExtractor.h  NormaliseOperator.h  NormalizationOperator.h  Pattern.h  PatternOperator.h  PatternSet.h  RemoveDBMeanOperator.h  RemoveMeanOperator.h  RoIPatternSet.h  SimplePatternSet.h  SumExtractor.h  VarianceExtractor.h  datafwd.h  util.h
data/schema/: database.xsd
data/src/: Database.cxx  EnergyNormaliseOperator.cxx  (+15 more)
doc/: Doxyfile
network/: Makefile
prog/: eta-filter.cxx  filter.cxx  getroi.cxx  lms-train.cxx  lvl1-filter.cxx  merge.cxx  mlp-relevance.cxx  mlp-run.cxx  mlp-train.cxx  relevance-filter.cxx  ringer-run.cxx  ringer.cxx  splitter.cxx  xml2dot.cxx  xml2text.cxx
rbuild/: Makefile
roiformat/: Makefile
schema/: network.xsd
script/: analysis.R  analysis.py  basic  mytrain  topdf.R  uniqroi.py
src/: CMakeLists.txt
src/cmake/: macros.cmake  nlab-external.cmake  nlabConfig.cmake
src/config/: CMakeLists.txt
src/config/config/: SynapseRProp.h  type.h
src/config/python/config/: __init__.py
src/config/python/src/: config.cc  main.cc
src/data/: CMakeLists.txt
src/data/data/: Database.h  Header.h  NormaliseOperator.h  NormalizationOperator.h  Pattern.h  PatternSet.h  RemoveDBMeanOperator.h  util.h
src/data/python/data/: Database.py  __init__.py  extractors.py
src/data/python/src/: database.cc  main.cc  operator.cc
src/data/src/: Database.cxx  Header.cxx  MeanExtractor.cxx  NormaliseOperator.cxx  NormalizationOperator.cxx  Pattern.cxx  PatternSet.cxx  RandomInteger.cxx  RemoveDBMeanOperator.cxx  SimplePatternSet.cxx  SumExtractor.cxx  util.cxx
src/network/: CMakeLists.txt
src/network/network/: InputNeuron.h  Network.h  Neuron.h  NeuronBackProp.h  OutputNeuron.h  Synapse.h
src/network/python/network/: __init__.py
src/network/python/src/: main.cc  network.cc
src/network/src/: Network.cxx  Synapse.cxx
src/prog/: mlp-bp-train.cxx  mlp-train.cxx  splitter.cxx  xml2dot.cxx
src/python/: CMakeLists.txt
src/python/nlab/: __init__.py  error.py
src/python/script/: rprop-train.py  run.py  sge-run.py  sge-train.py
src/sys/: CMakeLists.txt
src/sys/python/nlsys/: __init__.py
src/sys/python/src/: main.cc  reporter.cc
src/sys/src/: OptParser.cxx  Plain.cxx  Reporter.cxx  XMLProcessor.cxx  libxml2_Codec.cxx  test_date.cxx  util.cxx  xmlutil.cxx
src/sys/sys/: Reporter.h  XMLProcessor.h  debug.h  libxml2_ustring.h  util.h  xmlutil.h
sys/: Makefile
(+119 files in other folders)
